--- a/debian/rules
+++ b/debian/rules
@@ -28,7 +28,10 @@ install:
 %:
 	exec dh $@
 
-boost_build:
+changelog_build:
+	scripts/debian-update-versions
+
+boost_build: changelog_build
 	scripts/boost-build
 
 libtorrent_config: boost_build
@@ -38,7 +41,7 @@ libtorrent_build: libtorrent_config
 	scripts/libtorrent-build
 
 # drop the local/ since it's package managed now
-override_dh_auto_configure: libtorrent_build boost_build
+override_dh_auto_configure: libtorrent_build boost_build changelog_build
 	scripts/qbittorrent-config
 
 override_dh_auto_build:
