Check for b2 before calling it

--- a/build
+++ b/build
@@ -15,7 +15,9 @@ export QT_SELECT=qt6
 python3 -m pip install --user "$BUILD"/tools/ninja-1.11.1-py2.py3-none-manylinux_2_12_x86_64.manylinux2010_x86_64.whl
 python3 -m pip install --user "$BUILD"/tools/cmake-3.26.3-py2.py3-none-manylinux2014_x86_64.manylinux_2_17_x86_64.whl
 
-b2 --version
+if [ -f "$BUILD"/build_libs/bin/b2 ]; then
+   b2 --version
+fi
 ninja --version
 cmake --version
 
